Reorganized folders and now code only uses jpg format instead of webp.

--- a/Entails.html
+++ b/Entails.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Miguel Echeverria" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/Website.png" />
+		<link rel="icon" href="images/logos/Website.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload"> <!--class="shadow-racer-banner"-->
@@ -133,7 +133,7 @@
 									</div>
 									<div id="tools" class="box my-box">
 										<h3 class="my-work-separator">Tools</h3>
-											<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+											<span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											<p>
 												Streamlined production with tools such as:
 											</p>
@@ -149,7 +149,7 @@
 									</div>
 									<div id="station" class="box my-box">
 										<h3 class="my-work-separator">Station Event</h3>
-											<p><span class="image right"><img src="images/pic01.jpg" alt="" /></span>
+											<p><span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											<ul>
 												<li>Collaborated with designers to build one of the levels (station)</li>
 												<li>Crafted a high quality cinematic that precedes a mini-boss fight special encounter resembling space invaders</li>
@@ -161,7 +161,7 @@
 									</div>
 									<div id="boiler-room" class="box my-box">
 										<h3 class="my-work-separator">Boiler Room Event</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 										<ul>
 											<li>Worked closely with artists to build one of the levels (boiler room)</li>
 											<li>With the animators, we put together a bellows-like system that the player can jump on top, to rekindle a fire</li>
@@ -194,7 +194,7 @@
 									</div>
 									<div id="other-gameplay-tasks" class="box my-box">
 										<h3 class="my-work-separator">Other Gameplay Tasks</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											<ul>
 												<li>Moving infinite background in "cars" level</li>
 												<li>Camera shake system</li>
@@ -205,7 +205,7 @@
 									</div>
 									<div id="bug-fixing" class="box my-box">
 										<h3 class="my-work-separator">Bug fixing</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											In every software project, there are a wide range of bugs, as well as other smaller tasks that are not worth mentioning since they are assumed to have happened. However in this one, I was particularly involved in solving and helping others solve many of the bugs that arose during development, so I felt the need to mention it.
 										</p>
 									</div>
