--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Miguel Echeverria" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/Website.png" />
+		<link rel="icon" href="images/logos/Website.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload"> <!--class="shadow-racer-banner"-->
@@ -126,7 +126,7 @@
 									</div>
 									<div id="core-engine" class="box my-box">
 										<h3 class="my-work-separator">Core Engine Systems</h3>
-											<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+											<span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											<p>
 												Engineered many of our custom C++ engine's core systems, including but not limited to:
 											</p>
@@ -142,7 +142,7 @@
 									</div>
 									<div id="boat-movement" class="box my-box">
 										<h3 class="my-work-separator">Boat Movement</h3>
-											<span class="image right"><img src="images/pic01.jpg" alt="" /></span>
+											<span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											<p>
 												Worked side by side with another programmer on the boat controller used for all the boats in the game, with adjustable parameters for speed, maneurability etc.
 											</p>
@@ -150,7 +150,7 @@
 									</div>
 									<div id="boat-mechanics" class="box my-box">
 										<h3 class="my-work-separator">Boats' mechanics</h3>
-										<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 										<p>
 											Implemented a variety of mechanics related to some of the boats, such as:
 										</p>
@@ -184,7 +184,7 @@
 									</div>
 									<div id="other-gameplay-tasks" class="box my-box">
 										<h3 class="my-work-separator">Other Gameplay Tasks</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											Worked on other smaller gameplay tasks like for example:
 											<ul>
 												<li>Flocking system for birds that fly around the map</li>
@@ -197,7 +197,7 @@
 									</div>
 									<div id="3d-modelling" class="box my-box">
 										<h3 class="my-work-separator">3D Modelling</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											Assisted the main modeller by creating some of the models used in the game with 3ds Max:
 											<ul>
 												<li>Trirreme boat and its collider mesh</li>
