--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Miguel Echeverria" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/Website.png" />
+		<link rel="icon" href="images/logos/Website.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload"> <!--class="shadow-racer-banner"-->
@@ -100,15 +100,15 @@
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_1_720x405.webp" alt="Screenshot-1" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_2_720x405.webp" alt="Screenshot-2" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_3_720x405.webp" alt="Screenshot-3" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_4_720x405.webp" alt="Screenshot-4" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_5_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_5_720x405.webp" alt="Screenshot-5" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_6_720x405.webp" alt="Screenshot-6" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_7_720x405.webp" alt="Screenshot-7" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_8_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_8_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_8_720x405.webp" alt="Screenshot-8" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_9_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_9_720x405.jpg" srcset="images/screenshots/shadow-racer/Screenshot_9_720x405.webp" alt="Screenshot-9" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg" alt="Screenshot-1" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.jpg" alt="Screenshot-2" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg" alt="Screenshot-3" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg" alt="Screenshot-4" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_5_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_5_720x405.jpg" alt="Screenshot-5" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6_720x405.jpg" alt="Screenshot-6" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_7_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7_720x405.jpg" alt="Screenshot-7" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_8_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_8_720x405.jpg" alt="Screenshot-8" /></span></a></div>
+											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_9_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_9_720x405.jpg" alt="Screenshot-9" /></span></a></div>
 										</div>
 									</div>
 								</div>
@@ -119,8 +119,8 @@
 									<div id="race-system" class="box my-box">
 										<h3 class="my-work-separator">Race System</h3>
 										<p>
-											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/accept_challenge.webp"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/accept_challenge.webp" alt="Race-Screenshot-1" /></span></a>
-											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/bumper_handing.webp"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/bumper_handing.webp" alt="Race-Screenshot-2" /></span></a>
+											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg" alt="Race-Screenshot-1" /></span></a>
+											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/BumperHanding_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/BumperHanding_720x405.jpg" alt="Race-Screenshot-2" /></span></a>
 											Using UE4's event dispatchers, I developed a reusable race system that allowed other developers to easily create their own semi-scripted 1v1 races against an AI car.
 										</p>
 										<p>
@@ -147,18 +147,18 @@
 											<br>
 											<div class="box alt">
 												<div class="row gtr-uniform">
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.webp" alt="RaceLevel-Screenshot-1" /></span></a></div>
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.webp" alt="RaceLevel-Screenshot-2" /></span></a></div>
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.webp" alt="RaceLevel-Screenshot-3" /></span></a></div>
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.webp" alt="RaceLevel-Screenshot-4" /></span></a></div>
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.webp" alt="RaceLevel-Screenshot-5" /></span></a></div>
-													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.jpg" srcset="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.webp" alt="RaceLevel-Screenshot-6" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_1_720x405.jpg" alt="RaceLevel-Screenshot-1" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_2_720x405.jpg" alt="RaceLevel-Screenshot-2" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_3_720x405.jpg" alt="RaceLevel-Screenshot-3" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_4_720x405.jpg" alt="RaceLevel-Screenshot-4" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_5_720x405.jpg" alt="RaceLevel-Screenshot-5" /></span></a></div>
+													<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-building/RaceLevel_6_720x405.jpg" alt="RaceLevel-Screenshot-6" /></span></a></div>
 												</div>
 											</div>
 									</div>
 									<div id="cinematics" class="box my-box">
 										<h3 class="my-work-separator">Cinematics</h3>
-											<span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+											<span class="image left"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											<ul>
 												<li>Implemented several high quality cinematics that added context to the story and the mechanics of the game</li>
 												<li>Leveraging Unreal's sequencer system, created smooth camera transitions between cinematics and gameplay</li>
@@ -167,7 +167,7 @@
 									</div>
 									<div id="feedback" class="box my-box">
 										<h3 class="my-work-separator">Player/Environment Feedback</h3>
-										<span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 										<ul>
 											<li>Added controller rumble feedback to player mechanics like flashing, drifting, or using turbo</li>
 											<li>Added environment elements like animated crows that fly away when close to player, as well controller rumble when interacting with certain props</li>
@@ -190,18 +190,18 @@
 										<br>
 										<div class="box alt">
 											<div class="row gtr-uniform">
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp" alt="Lighting-Screenshot-1" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp" alt="Lighting-Screenshot-2" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp" alt="Lighting-Screenshot-3" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp" alt="Lighting-Screenshot-4" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp" alt="Lighting-Screenshot-5" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.jpg" srcset="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp" alt="Lighting-Screenshot-6" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.jpg" alt="Lighting-Screenshot-1" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.jpg" alt="Lighting-Screenshot-2" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.jpg" alt="Lighting-Screenshot-3" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.jpg" alt="Lighting-Screenshot-4" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.jpg" alt="Lighting-Screenshot-5" /></span></a></div>
+												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.jpg" alt="Lighting-Screenshot-6" /></span></a></div>
 											</div>
 										</div>
 									</div>
 									<div id="vfx" class="box my-box">
 										<h3 class="my-work-separator">VFX</h3>
-										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
 											Created a small set of vfx using Unreal's material editor and Niagara system:
 											<ul>
 												<li>Car Turbo</li>
@@ -248,21 +248,21 @@
 							</form>
 							<ul class="contact">
 								<li class="contact-item">
-									<img class="footer-icon" src="images/House.png" alt="Home Icon"/>
+									<img class="footer-icon" src="images/logos/House.png" alt="Home Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Phone.png" alt=""/>
+									<img class="footer-icon" src="images/logos/Phone.png" alt=""/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Email.png" alt="Email Icon"/>
+									<img class="footer-icon" src="images/logos/Email.png" alt="Email Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
 								<li class="contact-item">
-									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
-									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
-									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
+									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/logos/LinkedIn.png" alt="LinkedIn"/></a>
+									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/logos/GitHub.png" alt="GitHub"/></a>
+									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/logos/YouTube.png" alt="YouTube"/></a>
 								</li>
 							</ul>
 							<ul class="copyright">
