--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="I'm a game programmer who likes technology and building cool things. This portfolio webpage showcases some of the projects I have worked on so far. Enjoy! :)" />
 		<meta name="keywords" content="C++, Games, Videogames, Programming, GameDeveloper, GameProgrammer, Software, Portfolio" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/Website.png" />
+		<link rel="icon" href="images/logos/Website.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -62,16 +62,16 @@
 								<p>Hello! I am a passionate and driven C++ game programmer, with a <a href="https://www.digipen.es/academics/bs-in-computer-science-in-real-time-interactive-simulation" target="_blank" class="blue-on-hover">bachelor's degree in Computer Science in Real-Time Interactive Simulation from DigiPen Institute of Technology Europe.</a> Here I developed my skills with C++, and learnt about a variety of topics related to game development such as maths, physics, AI, engine architecture etc. Now, I am looking for opportunities on either gameplay, tools or engine programming.</p>
 								<p>This webpage was created with html, css, javascript and sass, and it showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
 								<p>For any enquiries, don't hesitate and send me an email to <b>m.echeverriamajadas@gmail.com</b>. Also, check out my LinkedIn, Github or Youtube!</p>
-								<a href="https://www.linkedin.com/in/miguel-echeverria-majadas/" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
-								<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
-								<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
+								<a href="https://www.linkedin.com/in/miguel-echeverria-majadas/" class="logo-link" id="linkedin" target="_blank"><img src="images/logos/LinkedIn.png" alt="LinkedIn"/></a>
+								<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/logos/GitHub.png" alt="GitHub"/></a>
+								<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/logos/YouTube.png" alt="YouTube"/></a>
 							</div>
 						</section>
 
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style2">
 								<div class="inner">
-									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/ShadowRacerBanner.jpg" srcset="images/ShadowRacerBanner.webp" alt="ShadowRacer-Banner"/></a>
+									<a href="ShadowRacer.html" class="my-image-left clickable-img"><img src="images/main-page/ShadowRacerBanner.jpg" alt="ShadowRacer-Banner"/></a>
 									<div class="content">
 										<h2 class="major">Shadow Racer</h2>
 										<p>
@@ -94,7 +94,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style3">
 								<div class="inner">
-									<a href="Seavilizations.html" class="my-image-right clickable-img"><img src="images/SeavilizationsBanner.jpg" srcset="images/SeavilizationsBanner.webp" alt="Seavilizations-Banner" /></a>
+									<a href="Seavilizations.html" class="my-image-right clickable-img"><img src="images/main-page/SeavilizationsBanner.jpg" alt="Seavilizations-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Seavilizations</h2>
 										<p>
@@ -119,7 +119,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style4">
 								<div class="inner">
-									<a href="Entails.html" class="my-image-left clickable-img"><img src="images/EntailsBanner.jpg" srcset="images/EntailsBanner.webp" alt="Entails-Banner" /></a>
+									<a href="Entails.html" class="my-image-left clickable-img"><img src="images/main-page/EntailsBanner.jpg" alt="Entails-Banner" /></a>
 									<div class="content">
 										<h2 class="major">Entails</h2>
 										<p>
@@ -148,25 +148,25 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/ClothPlusAnim.jpg" srcset="images/ClothPlusAnim.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/main-page/ClothPlusAnim.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/AntColonySimWithInternetImages.jpg" srcset="images/AntColonySimWithInternetImages.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/main-page/AntColonySimWithInternetImages.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/SpacePartitioning.jpg" srcset="images/SpacePartitioning.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Space Partitioning + GJK Collision Detection</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/NetAsteroidsWithParticles.jpg" srcset="images/NetAsteroidsWithParticles.webp" alt="Project-Screenshot" /></a>
+											<a href="#" class="image clickable-img"><img src="images/main-page/NetAsteroidsWithParticles.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
 											<a href="#" class="special blue-on-hover">Learn more</a>
@@ -204,21 +204,21 @@
 							</form>
 							<ul class="contact">
 								<li class="contact-item">
-									<img class="footer-icon" src="images/House.png" alt="Home-Icon"/>
+									<img class="footer-icon" src="images/logos/House.png" alt="Home-Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Phone.png" alt="Phone-Icon"/>
+									<img class="footer-icon" src="images/logos/Phone.png" alt="Phone-Icon"/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Email.png" alt="Email-Icon"/>
+									<img class="footer-icon" src="images/logos/Email.png" alt="Email-Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
 								<li class="contact-item">
-									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
-									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
-									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
+									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/logos/LinkedIn.png" alt="LinkedIn"/></a>
+									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/logos/GitHub.png" alt="GitHub"/></a>
+									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/logos/YouTube.png" alt="YouTube"/></a>
 								</li>
 							</ul>
 							<ul class="copyright">
