--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -242,21 +242,21 @@
 							</form>
 							<ul class="contact">
 								<li class="contact-item">
-									<img class="footer-icon" src="images/House.png" alt="Home Icon"/>
+									<img class="footer-icon" src="images/logos/House.png" alt="Home Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Phone.png" alt=""/>
+									<img class="footer-icon" src="images/logos/Phone.png" alt=""/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Email.png" alt="Email Icon"/>
+									<img class="footer-icon" src="images/logos/Email.png" alt="Email Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
 								<li class="contact-item">
-									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/LinkedIn.png" alt="LinkedIn"/></a>
-									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/GitHub.png" alt="GitHub"/></a>
-									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/YouTube.png" alt="YouTube"/></a>
+									<a href="www.linkedin.com/in/miguel-echeverria-majadas" class="logo-link" id="linkedin" target="_blank"><img src="images/logos/LinkedIn.png" alt="LinkedIn"/></a>
+									<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/logos/GitHub.png" alt="GitHub"/></a>
+									<a href="https://www.youtube.com/channel/UCU7kYy_D3UsaLmHRGg5A0tw" class="logo-link" id="youtube" target="_blank"><img src="images/logos/YouTube.png" alt="YouTube"/></a>
 								</li>
 							</ul>
 							<ul class="copyright">
