--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -100,7 +100,7 @@
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/W2sti1KtMJY?autoplay=1&mute=1&rel=0&start=8&playlist=W2sti1KtMJY" title="Shadow Racer Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
-											<div class="col-3"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg" alt="Screenshot-1" /></span></a></div>
+											<div class="col-3"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7_720x405.jpg" alt="Screenshot-1" /></span></a></div>
 											<div class="col-3"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.jpg" alt="Screenshot-2" /></span></a></div>
 											<div class="col-3"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.jpg" alt="Screenshot-3" /></span></a></div>
 											<div class="col-3"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.jpg" alt="Screenshot-4" /></span></a></div>
@@ -118,8 +118,7 @@
 									<div id="race-system" class="box my-box">
 										<h3 class="my-work-separator">Race System</h3>
 										<p>
-											
-											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/BumperHanding_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/BumperHanding_720x405.jpg" alt="Race-Screenshot-2" /></span></a>
+											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg" alt="Race-Screenshot-2" /></span></a>
 											Using UE4's event dispatchers, I developed a reusable race system that allowed other developers to easily create their own semi-scripted 1v1 races against an AI car.
 										</p>
 										<p>
@@ -133,8 +132,11 @@
 											<li>Cone interactables</li>
 											<li>Race cinematics</li>
 										</ul>
-										
-										<br>
+										<div class="box alt">
+											<div class="row gtr-uniform">
+												<div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/LuQprV259zk?mute=1&rel=0" title="Race Section"></iframe></span></div>
+											</div>
+										</div>
 									</div>
 									<div id="level-building" class="box my-box">
 										<h3 class="my-work-separator">Level Building</h3>
@@ -157,16 +159,21 @@
 									</div>
 									<div id="cinematics" class="box my-box">
 										<h3 class="my-work-separator">Cinematics</h3>
-											<span class="image left"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											<ul>
 												<li>Implemented several high quality cinematics that added context to the story and the mechanics of the game</li>
 												<li>Leveraging Unreal's sequencer system, created smooth camera transitions between cinematics and gameplay</li>
 											</ul>
-										<br>
+											<br>
+											<div class="box alt">
+												<div class="row gtr-uniform">
+													<div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/TrvoZ4u96wc?mute=1&rel=0" title="Intro Cinematic"></iframe></span></div>
+													<div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wAOc-ivqKMc?mute=1&rel=0" title="Smooth Transitions"></iframe></span></div>
+												</div>
+											</div>
 									</div>
 									<div id="feedback" class="box my-box">
 										<h3 class="my-work-separator">Player/Environment Feedback</h3>
-										<span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
+										<a class="blue-on-hover" href="images/screenshots/shadow-racer/feedback/Crows.gif"><span class="image right"><img src="images/screenshots/shadow-racer/feedback/Crows.gif" alt="Crows Gif" /></span></a>
 										<ul>
 											<li>Added controller rumble feedback to player mechanics like flashing, drifting, or using turbo</li>
 											<li>Added environment elements like animated crows that fly away when close to player, as well controller rumble when interacting with certain props</li>
