Anim Engine and Ant Colony Sim pages added.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<div class="inner">
 								<h2 class="major">About me</h2>
 								<p>Hello! I am a passionate and driven C++ game programmer, with a <a href="https://www.digipen.es/academics/bs-in-computer-science-in-real-time-interactive-simulation" target="_blank" class="blue-on-hover">bachelor's degree in Computer Science in Real-Time Interactive Simulation from DigiPen Institute of Technology Europe.</a> Here I developed my skills with C++, and learnt about a variety of topics related to game development such as maths, physics, AI, engine architecture etc. Now, I am looking for opportunities on either gameplay, tools or engine programming.</p>
-								<p>This webpage was created with html, css, javascript and sass, and it showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
+								<p>This webpage was created with html and css with the help of one of HTML5UP's designs. It showcases some of the games and personal projects I have worked on so far. Take a look and enjoy! :)</p>
 								<p>For any enquiries, don't hesitate and send me an email to <b>m.echeverriamajadas@gmail.com</b>. Also, check out my LinkedIn, Github or Youtube!</p>
 								<a href="https://www.linkedin.com/in/miguel-echeverria-majadas/" class="logo-link" id="linkedin" target="_blank"><img src="images/logos/LinkedIn.png" alt="LinkedIn"/></a>
 								<a href="https://github.com/Melell" class="logo-link" id="github" target="_blank"><img src="images/logos/GitHub.png" alt="GitHub"/></a>
@@ -148,16 +148,16 @@
 									<p>These are some other projects that I have developed either at DigiPen, or in my free time. They cover topics, like animation, AI, graphics, optimizations, physics and networking.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/main-page/ClothPlusAnim.jpg" alt="Project-Screenshot" /></a>
+											<a href="AnimationEngine.html" class="image clickable-img"><img src="images/main-page/ClothPlusAnim.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Animation Engine + Cloth Simulation</h3>
 											<p>In this project, I implemented a small animation engine from scratch using C++. It is capable of spline creation and interpolation, 1D and 2D animation blending, IKs, and simulation of cloth.</p>
-											<a href="#" class="special blue-on-hover">Learn more</a>
+											<a href="AnimationEngine.html" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/main-page/AntColonySimWithInternetImages.jpg" alt="Project-Screenshot" /></a>
+											<a href="AntColonySimulation.html" class="image clickable-img"><img src="images/main-page/AntColonySimWithInternetImages.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Ant Colony Simulation</h3>
 											<p>Two person AI research project. Implemented an ant colony foraging behaviour simulation of up to 1000 ants, inspired by the Ant Colony Optimization algorithm, from scratch using C++.</p>
-											<a href="#" class="special blue-on-hover">Learn more</a>
+											<a href="AntColonySimulation.html" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" /></a>
