--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -118,7 +118,7 @@
 									<div id="race-system" class="box my-box">
 										<h3 class="my-work-separator">Race System</h3>
 										<p>
-											<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg" alt="Race-Screenshot-2" /></span></a>
+											<!--<a class="blue-on-hover" href="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg"><span class="image right clickable-img"><img src="images/screenshots/shadow-racer/race-system/AcceptChallenge_720x405.jpg" alt="Race-Screenshot-2" /></span></a>-->
 											Using UE4's event dispatchers, I developed a reusable race system that allowed other developers to easily create their own semi-scripted 1v1 races against an AI car.
 										</p>
 										<p>
@@ -130,7 +130,7 @@
 											<li>Enemy car AI</li>
 											<li>Breakable mining carts</li>
 											<li>Cone interactables</li>
-											<li>Race cinematics</li>
+											<li>Race start and end cinematics</li>
 										</ul>
 										<div class="box alt">
 											<div class="row gtr-uniform">
@@ -138,6 +138,7 @@
 											</div>
 										</div>
 									</div>
+									<br>
 									<div id="level-building" class="box my-box">
 										<h3 class="my-work-separator">Level Building</h3>
 											<ul>
@@ -157,6 +158,7 @@
 												</div>
 											</div>
 									</div>
+									<br>
 									<div id="cinematics" class="box my-box">
 										<h3 class="my-work-separator">Cinematics</h3>
 											<ul>
@@ -171,9 +173,10 @@
 												</div>
 											</div>
 									</div>
+									<br>
 									<div id="feedback" class="box my-box">
 										<h3 class="my-work-separator">Player/Environment Feedback</h3>
-										<a class="blue-on-hover" href="images/screenshots/shadow-racer/feedback/Crows.gif"><span class="image right"><img src="images/screenshots/shadow-racer/feedback/Crows.gif" alt="Crows Gif" /></span></a>
+										<!--<a class="blue-on-hover" href="images/screenshots/shadow-racer/feedback/Crows_676x676.jpg"><span class="image right"><img src="images/screenshots/shadow-racer/feedback/CrowFlying_400x400.gif" alt="Crows" /></span></a>-->
 										<ul>
 											<li>Added controller rumble feedback to player mechanics like flashing, drifting, or using turbo</li>
 											<li>Added environment elements like animated crows that fly away when close to player, as well controller rumble when interacting with certain props</li>
@@ -182,6 +185,7 @@
 										</ul>
 										<br>
 									</div>
+									<br>
 									<div id="level-lighting" class="box my-box">
 									<h3 class="my-work-separator">Level Lighting</h3>
 										<p>
@@ -205,6 +209,7 @@
 											</div>
 										</div>
 									</div>
+									<br>
 									<div id="vfx" class="box my-box">
 										<h3 class="my-work-separator">VFX</h3>
 										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
