--- a/AnimationEngine.html
+++ b/AnimationEngine.html
@@ -68,8 +68,8 @@
 									<h2 class="major">Shortcuts</h2>
 									<ul class="actions small">
 										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
+										<li><a href="#feature-a" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
+										<li><a href="#feature-b" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
 									</ul>
 								</div>
 
@@ -101,7 +101,7 @@
 									<br><br>
 									<h2 class="major">Feature B</h2>
 									<h6 style="font-weight: lighter;">Demo video</h6>
-									<iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Cloth Simulation" class="trailer dynamic-vid">
+									<iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Character Locomotion" class="trailer dynamic-vid">
 								</div>
 
 							</div>
