--- a/NetworkedAsteroidsGame.html
+++ b/NetworkedAsteroidsGame.html
@@ -45,7 +45,7 @@
 					<section id="banner"> <!--class="shadow-racer-banner"-->
 						<div class="inner">
 							<div class="logo"></div>
-							<h2>Ant Colony Simulation</h2>
+							<h2>Networked Asteroids Game</h2>
 							<p></p>
 						</div>
 					</section>
@@ -54,7 +54,7 @@
 					<section id="wrapper">
 
 						<!-- "Blue" wrapper -->
-						<section id="ant-colony-sim-details" class="wrapper alt style1">
+						<section id="networked-asteroids-details" class="wrapper alt style1">
 
 							<div class="inner">
 
@@ -69,20 +69,20 @@
 									<ul class="actions small">
 										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
 										<li><a href="#feature-a" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
+										<li><a href="#feature-b" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
 									</ul>
 								</div>
 
-								<div id="about-anim-engine">
+								<div id="about-networked-asteroids">
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Cool research project.
+										Cool networked asteroids game.
 									</p>
 
 									<ul class="game-info-list">
 										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;C++ from scratch</li>
-										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;2 months</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;1 month</li>
 										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;Pair Project</li>
 									</ul>
 								</div>
@@ -91,7 +91,14 @@
 									<br><br>
 									<h2 class="major">Feature A</h2>
 									<h6 style="font-weight: lighter;">Demo video</h6>
-									<iframe src="https://www.youtube.com/embed/2ASpOako-P0?autoplay=1&mute=1&rel=0&loop=1&playlist=2ASpOako-P0" title="Ant Colony Simulation" class="trailer dynamic-vid">
+									<iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=1&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Feature A Video" class="trailer dynamic-vid">
+								</div>
+
+                                <div id="feature-b">
+									<br><br>
+									<h2 class="major">Feature B</h2>
+									<h6 style="font-weight: lighter;">Demo video</h6>
+									<iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Feature B Video" class="trailer dynamic-vid">
 								</div>
 
 							</div>
