Links to all projects within main page now working.

--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
 											<a href="AntColonySimulation.html" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" /></a>
+											<a href="SpacePartitioning.html" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Space Partitioning + GJK Collision Detection</h3>
 											<p>In this C++ project, I did several performance improvements to the collision detection system through spacial acceleration structures like octrees or kd-trees. I also implemented the GJK algorithm for collision detection between arbitrary convex shapes.</p>
-											<a href="#" class="special blue-on-hover">Learn more</a>
+											<a href="SpacePartitioning.html" class="special blue-on-hover">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image clickable-img"><img src="images/main-page/NetAsteroidsWithParticles.jpg" alt="Project-Screenshot" /></a>
+											<a href="NetworkedAsteroidsGame.html" class="image clickable-img"><img src="images/main-page/NetAsteroidsWithParticles.jpg" alt="Project-Screenshot" /></a>
 											<h3 class="major">Networked Asteroids Game</h3>
 											<p>Simple networked asteroids game made from scratch with C++ and the Winsock library. It uses a server-client model, supports up to 4 players, and uses UDP to send packets.</p>
-											<a href="#" class="special blue-on-hover">Learn more</a>
+											<a href="NetworkedAsteroidsGame.html" class="special blue-on-hover">Learn more</a>
 										</article>
 									</section>
 								</div>
